--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseurl: http://hoffis-eck.de/Guido/
 languageCode: de-de
 title: Sprechen mit Guido
-theme: ananke
+theme: test
 publishDir: docs
 enableRobotsTXT: true
